_sass/_blog.scss
$author-img-size: 7.5rem;

.blog-post {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p, .footnotes, .post-footer {
    width: 100%;
  }

  @include headings(4rem, 0.6rem);

  ol, ul {

    color: $color-gray;
    @extend .font-size-5;
  }

  .row {
    margin-left: inherit;
    margin-right: inherit;
  }

  img {
    display: block;
    max-width: 100%;
    height: auto;
    margin: 0 auto;
  }

  .img-table {
    display: inline-block;
    max-width: 100%;
    height: auto;
    margin: 1px auto;
  }

  .center-img-text {
    display: inline-block;
    font-style: italic;
    text-align: center;
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  table {
    min-height: .01%;
    overflow-x: auto;
    width: 100%;
    max-width: 100%;
    margin-bottom: 2rem;
  }

  div[class*=" highlighter-"] {
    width: 100%;
  }

  tbody>tr>td, tbody>tr>th, tfoot>tr>td, tfoot>tr>th, thead>tr>td, thead>tr>th {
    padding: 8px;
    line-height: 1.42857143;
    vertical-align: top;
    border-top: thin solid $color-gray-5;
  }

  .author-image {
    display: inline-block;
    margin: 1rem 1.6rem;

    .img {
      background-size: contain;
      border-radius: 100%;
      display: block;
      height: $author-img-size;
      margin: 0 auto;
      width: $author-img-size;
    }
  }

  .author {
    display: inline-block;
    margin: 3rem 0;

    h4 a {
      color: $color-primary;
    }
  }

  .share {
    margin: 3rem 1.6rem;
    display: flex;
    gap: 1.2rem;
    justify-content: left;
    align-items: center;

    h4 {
      display: inline-block;
      width: inherit;
      margin-right: 2.5rem;
      margin-bottom: 0;
    }
  }

  #location-dot-svg {
    height: 1.7rem;
    display: inline-block;
  }

  .socialicon {
    background: $color-primary;
    color: $color-white;

    &.tw {
      display: none;
    }

    &.fb {
      background: $color-facebook;
    }

    &.gplus {
      background: $color-gplus;
    }
  }

  .share-socialicons {
    display: block;
    height: 2rem;
    shape-rendering: optimizeSpeed;
    filter: invert(100%);
  }

  #disqus_thread {
    min-height: .01px;
    width: 100%;
  }

  .gist {
    width: 100%; 
    box-sizing: border-box;
    padding-left: 0 !important; 
    padding-right: 0 !important;
    overflow-x: auto;
  }

}

